remove cancel endpoint and allow updates from cancelled state; fix tests